# minim5robo_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: lds_2d.lua  manual_controller_param.yaml
include/minim5robo_bridge/: minim5robo_bridge_component.hpp
launch/: bringup.launch.py  cartographer_localization.launch.py  robot_description.launch.py  rviz.launch.py  static_tf.launch.py
rviz/: test.rviz
src/: main.cpp
urdf/: minim5robo.urdf
urdf/stl/: MiniM5Robo.stl
